feat: enhance UI with new color chooser and improved dark theme styles